Removed some tags

--- a/blogg/index.html
+++ b/blogg/index.html
@@ -526,7 +526,10 @@
         }
 
         #dib-categories {
-            margin: -15px 0 0 0;
+            max-width: 680px;
+            margin: 0 auto;
+            font-size: 14px;
+            font-family: 'Open Sans';
         }
 
         #dib-categories ul {
@@ -565,11 +568,6 @@
 
         .dib-post-categories {
             display: none;
-        }
-
-        #dib-categories {
-            max-width: 680px;
-            margin: 0 auto;
         }
 
         .dib-more {
