More blog settings

--- a/blogg/index.html
+++ b/blogg/index.html
@@ -3,6 +3,7 @@
 <title></title>
 
 <head>
+    <title>Besiktningsman.se | Besiktningsbloggen</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -395,14 +396,14 @@
             float: left;
             margin-right: 50px;
             margin-bottom: 0px;
-
+            border-radius: 4px;
         }
 
         .dib-post-featured-image img {
             position: relative;
             z-index: 1;
             width: 100%;
-            max-width: 1100px !important;
+            max-width: 1100px;
             border-radius: 4px;
             overflow: hidden;
             margin: 0 auto;
@@ -526,8 +527,6 @@
         }
 
         #dib-categories {
-            max-width: 680px;
-            margin: 0 auto;
             font-size: 14px;
             font-family: 'Open Sans';
         }
