--- a/blogg/index.html
+++ b/blogg/index.html
@@ -193,16 +193,9 @@
         <div class="stripe s3"></div>
         <div class="stripe s4"></div>
     </div>
-    <nav class="productNav">
-        <div class="container-lg">
-            <span>
-                <div id="dib-categories"></div>
-            </span>
-        </div>
-    </nav>
     <!-- HEADER -->
     <section class="" id="" style="background: transparent;">
-        <div class="container-lg margin-top-1">
+        <div class="container-lg" style="margin-top: 15rem;">
             <div id="dib-categories"></div>
             <div id="dib-posts"></div>
         </div>
@@ -363,17 +356,13 @@
             -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
         }
 
-        .dib {
-            margin: 100px 0;
-        }
-
         .dib-homepage-title {
             font-style: normal;
             font-weight: 600;
             font-size: 52px;
             line-height: 1.15;
             color: #000;
-            margin: 100px 0 !important;
+            margin: 40px 0px 60px !important;
         }
 
         .dib-post p,
