Text edit Skanska

--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -263,7 +263,7 @@
                             <h3 class="equalElement common-BodyTitle">Med Besiktningsman.se sker alla besiktningar
                                 digitalt,
                                 <br>
-                                vilket innebär protokol samma dag för omedelbar avhjälpning.</h3>
+                                vilket innebär protokoll samma dag för omedelbar avhjälpning.</h3>
                         </li>
                         <li class="col-4-12">
                             <img src="../../assets/svg/checkmark_white_sm.svg" alt="Ikon som illusterar bilagor"
