Landing page > ispect btn changed as to redirect to dedicated landing page

--- a/index.html
+++ b/index.html
@@ -583,29 +583,8 @@
 									samt noll byggfel.</p>
 								<div class="section-Links">
 									<a href="ispect/">
-										<p class="common-Link">Mer om digitaliserad entreprenadbesiktning<i
-												class="icono-arrow2-left"></i></p>
+										<p class="blue common-Button">Digitaliserad entreprenadbesiktning</p>
 									</a>
-									<a class="typeform-share blue common-Button"
-										href="https://sebastian209.typeform.com/to/oZw406" data-mode="1"
-										target="_blank">Gör offertförfrågan</a>
-									<script>
-										(function () {
-											var qs, js, q, s, d = document,
-												gi = d.getElementById,
-												ce = d.createElement,
-												gt = d.getElementsByTagName,
-												id = "typef_orm_share",
-												b = "https://embed.typeform.com/";
-											if (!gi.call(d, id)) {
-												js = ce.call(d, "script");
-												js.id = id;
-												js.src = b + "embed.js";
-												q = gt.call(d, "script")[0];
-												q.parentNode.insertBefore(js, q)
-											}
-										})()
-									</script>
 								</div>
 							</li>
 							<li class="col-6-12 left fromRight">
