Changed url to calendar
Changed 2 url's that lead to Hubspots meeting booking calendar.

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -336,7 +336,7 @@
 					<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
 						<!-- Start of Meetings Embed Script -->
 						<div class="meetings-iframe-container"
-							data-src="https://meetings.hubspot.com/kenneth-helenius/traffa-besiktningsmanse?embed=true">
+							data-src="https://meetings.hubspot.com/kenneth-helenius1?embed=true">
 						</div>
 						<script type="text/javascript"
 							src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js">
@@ -346,7 +346,7 @@
 					<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
 						<!-- Start of Meetings Embed Script -->
 						<div class="meetings-iframe-container"
-							data-src="https://meetings.hubspot.com/yones1?embed=true"></div>
+							data-src="http://meetings.hubspot.com/yones2?embed=true"></div>
 						<script type="text/javascript"
 							src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js">
 						</script>
