--- a/skanska/index.html
+++ b/skanska/index.html
@@ -346,7 +346,7 @@
 					<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
 						<!-- Start of Meetings Embed Script -->
 						<div class="meetings-iframe-container"
-							data-src="http://meetings.hubspot.com/yones2?embed=true"></div>
+							data-src="https://meetings.hubspot.com/yones2?embed=true"></div>
 						<script type="text/javascript"
 							src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js">
 						</script>
