Directory fix for images

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -325,19 +325,19 @@
 					</div>
 					<ul class="grid center margin-top-5 margin-bottom-10">
 						<li class="col-2-12" style="    max-width: 24.66667%;">
-							<img src="/assets/img/bm/contact-form-icon.svg" alt="" style="width: 100px;">
+							<img src="../assets/img/bm/contact-form-icon.svg" alt="" style="width: 100px;">
 							<p class="common-BodyText">Fyll i formuläret</p>
 						</li>
 						<li class="col-2-12" style="    max-width: 24.66667%;">
-							<img src="/assets/img/bm/calendarbooker-icon.svg" alt="" style="width: 100px;">
+							<img src="../assets/img/bm/calendarbooker-icon.svg" alt="" style="width: 100px;">
 							<p class="common-BodyText">Välj en ledig tid</p>
 						</li>
 						<li class="col-2-12" style="    max-width: 24.66667%;">
-							<img src="/assets/img/bm/payment-icon.svg" alt="" style="width: 100px;">
+							<img src="../assets/img/bm/payment-icon.svg" alt="" style="width: 100px;">
 							<p class="common-BodyText">Betala enkelt med kreditkort, Swish eller faktura</p>
 						</li>
 						<li class="col-2-12" style="    max-width: 24.66667%;">
-							<img src="/assets/img/bm/phone-icon.svg" alt="" style="width: 100px;">
+							<img src="../assets/img/bm/phone-icon.svg" alt="" style="width: 100px;">
 							<p class="common-BodyText">Besiktningsman bokad för konsultation</p>
 						</li>
 						<div class="announcement" style="margin-top: 5rem;">
