Meta tags updated

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -16,16 +16,16 @@
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title"
-		content="xx" />
+		content="Konsultera en Besiktningsman" />
 	<meta property="og:description"
-		content="xx" />
+		content="Boka tid idag för rådgivning med byggrelatade frågor hos Besiktningsman.se" />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title"
-		content="xx" />
+		content="Konsultera en Besiktningsman" />
 	<meta name="twitter:description"
-		content="xx" />
+		content="Boka tid idag för rådgivning med byggrelatade frågor hos Besiktningsman.se" />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
@@ -261,7 +261,6 @@
 						</h1>
 						<p class="common-MediumBodyText text-white bold">
 							Rådgivning för dig med byggrelatade frågor
-
 						</p>
 						<a href="#boka">
 							<button type="button" name="button"
