--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -206,7 +206,7 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="../../../"><img src="../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se"
+				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"
 						style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="position-top"><svg>
@@ -253,13 +253,10 @@
 				<div class="wrap">
 
 					<div class="container-lg left" style="padding-top: 5%;">
-						<h1 class="common-IntroText text-white" 
-						style="font-family: Merriweather-Bold;
-								font-size: 42px;
-								letter-spacing: 0.3px;">
+						<h1 class="common-IntroText text-white">
 							Konsultera en Besiktningsman
 						</h1>
-						<p class="common-MediumBodyText text-white bold">
+						<p class="common-BodyText text-white">
 							Rådgivning för dig med byggrelatade frågor
 						</p>
 						<a href="#boka">
@@ -283,11 +280,7 @@
 					<div class="margin-top-1 margin-bottom-5">
 						<ul class="flex left">
 							<li class="col-6-12 fromBottomLeft">
-								<h2 class="common-IntroText2" 
-								style="font-family: Merriweather-Bold;
-										font-size: 32px;
-										color: #1F2231;
-										letter-spacing: 0.3px;">
+								<h2 class="common-IntroText2">
 										Vad innebär en konsultation med Besiktningsman.se?
 								</h2>
 								<p class="common-BodyText">Oavsett om du behöver ta ett byggtekniskt beslut inom din Brf, eller om du personligen behöver tips inför en renovering
@@ -314,11 +307,7 @@
 			<div class="container">
 				<div class="container-lg">
 					<div class="toCenter center margin-top-1 margin-bottom-5">
-						<h2 class="common-IntroText" 
-								style="font-family: Merriweather-Bold;
-								font-size: 42px;
-								color: #1F2231;
-								letter-spacing: 0.3px;">
+						<h2 class="common-IntroText2">
 								Hur går en konsultation till?
 						</h2>
 					</div>
