Text updates, layout etc

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -252,7 +252,7 @@
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 
-					<div class="container-lg left" style="padding-top: 5%;">
+					<div class="container-lg left" style="padding-top: 5%;padding: 0;">
 						<h1 class="common-IntroText text-white">
 							Konsultera en Besiktningsman
 						</h1>
@@ -281,15 +281,29 @@
 						<ul class="flex left">
 							<li class="col-6-12 fromBottomLeft">
 								<h2 class="common-IntroText2">
-										Vad innebär en konsultation med Besiktningsman.se?
+									Vad innebär en konsultation med Besiktningsman.se?
 								</h2>
-								<p class="common-BodyText">Oavsett om du behöver ta ett byggtekniskt beslut inom din Brf, eller om du personligen behöver tips inför en renovering
+								<p class="common-BodyText">
+								Oavsett om du behöver ta ett byggtekniskt beslut inom din Brf, eller om du personligen behöver tips inför en renovering
 								- så har du kommit rätt.
 								</p>
-								<p class="common-BodyText">Med några enkla knapptryck får du en besiktningsman direkt i mobilen som kan besvara alla dina byggrelaterade frågor,
-								stora som små.</p>
-								<p class="common-BodyText">Samtliga våra besiktningsmän är Byggingenjör SBR. De har en gedigen erfarenhet från nyproduktion , ROT, projektledning
-								etc. Samt naturligtvis tusentals utförda besiktningar.</p>
+								<p class="common-BodyText">
+								Med några enkla knapptryck får du en besiktningsman direkt i mobilen som kan besvara alla dina byggrelaterade frågor,
+								stora som små.
+								</p>
+								<p class="common-BodyText">
+								Samtliga våra besiktningsmän är Byggingenjör SBR. 
+								De har en gedigen erfarenhet från nyproduktion , ROT, projektledning etc. 
+								Samt naturligtvis tusentals utförda besiktningar.
+								</p>
+								<p class="common-BodyText">
+									De är väl insatta i de olika avtalsformer som används i byggbranschen, såsom AB/ABT , ABS och konsumenttjänstlagen samt
+									gällande branschregler. 
+									<br>
+									<br>
+									<a href="#boka" class="common-Link">Nu finns de här för att svara på alla dina frågor!</a>
+									
+								</p>
 							</li>
 							<li class="col-6-12 bottom">
 								<img src="../assets/img/bm/viberg_lindbom.png" style="width: 100%;"/>
