--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -114,25 +114,28 @@
 	<noscript><img height="1" width="1" style="display:none"
 			src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1" /></noscript>
 	<!-- End Facebook Pixel Code -->
-		<!-- add the following script to the <head> or in the custom.js file -->
-		<script>
-			window.setHashLink = 0;
-
-			$(function () {
-				if (window.location.hash === "#kalender") { //your hash tag url
-					setTimeout(function () {
-						window.showPopup('hash-popup');
-					}, 500);
-
-					//remove the hash tag on open (optional)
-					if (history.pushState) {
-						window.history.pushState("", "", location.href.split('#')[0]);
-					} else {
-						window.location.hash = "";
-					}
-				}
-			});
-		</script>
+	<!-- Bokamera script -->
+	<script type="text/javascript">
+		window.BOKAMERA = {
+			"configuration": {
+				"company": "b40935a5-c686-4a77-9771-435bedb3e9c0",
+				"bookMethods": [
+					"contact-information",
+					"login",
+					"login-facebook"
+				],
+				"bookLayout": "service-based",
+				"timesLayout": "week",
+				"listingLayout": "rows",
+				"showNextAvailableTime": false,
+				"hideServiceImage": false,
+				"showEndTimeOnTimeslots": false,
+				"language": "sv",
+				"darkTheme": false,
+				"translations": []
+			}
+		}
+	</script>
 </head>
 
 <body class="slides scroll simplifiedMobile defaultScroll">
@@ -150,52 +153,9 @@
 			<path
 				d="M6.914 5.5l3.793-3.793c.391-.391.391-1.023 0-1.414s-1.023-.391-1.414 0l-3.793 3.793-3.793-3.793c-.391-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l3.793 3.793-3.793 3.793c-.391.391-.391 1.023 0 1.414.195.195.451.293.707.293s.512-.098.707-.293l3.793-3.793 3.793 3.793c.195.195.451.293.707.293s.512-.098.707-.293c.391-.391.391-1.023 0-1.414l-3.793-3.793z" />
 		</symbol>
-		<symbol id="arrow-left" viewBox="0 0 31 72">
-			<path
-				d="M30 72c-.3 0-.6-.1-.8-.4l-29-34c-.3-.4-.3-.9 0-1.3l29-36c.3-.4 1-.5 1.4-.2.4.3.5 1 .2 1.4l-28.5 35.5 28.5 33.4c.4.4.3 1.1-.1 1.4-.2.1-.5.2-.7.2z" />
-		</symbol>
-		<symbol id="arrow-right" viewBox="0 0 31 72">
-			<path
-				d="M1 0c.3 0 .6.1.8.4l29 34c.3.4.3.9 0 1.3l-29 36c-.3.4-1 .5-1.4.2-.4-.3-.5-1-.2-1.4l28.5-35.5-28.5-33.4c-.4-.4-.3-1.1.1-1.4.2-.1.5-.2.7-.2z" />
-		</symbol>
-		<symbol id="back" viewBox="0 0 20 20">
-			<path
-				d="M2.3 10.7l5 5c.4.4 1 .4 1.4 0s.4-1 0-1.4l-3.3-3.3h11.6c.6 0 1-.4 1-1s-.4-1-1-1h-11.6l3.3-3.3c.4-.4.4-1 0-1.4-.2-.2-.4-.3-.7-.3s-.5.1-.7.3l-5 5c-.2.2-.3.5-.3.7 0 .2.1.5.3.7z" />
-		</symbol>
 		<symbol id="menu" viewBox="0 0 22 22">
 			<path
 				d="M1 5h20c.6 0 1-.4 1-1s-.4-1-1-1h-20c-.6 0-1 .4-1 1s.4 1 1 1zm20 5h-20c-.6 0-1 .4-1 1s.4 1 1 1h20c.6 0 1-.4 1-1s-.4-1-1-1zm0 7h-20c-.6 0-1 .4-1 1s.4 1 1 1h20c.6 0 1-.4 1-1s-.4-1-1-1z" />
-		</symbol>
-		<symbol id="share" viewBox="0 0 22 22">
-			<path
-				d="M21 10c-.6 0-1 .4-1 1v7h-18v-7c0-.6-.4-1-1-1s-1 .4-1 1v7c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2v-7c0-.6-.4-1-1-1zM5.5 7.5c.3 0 .5-.1.7-.3l3.8-3.8v9.6c0 .6.4 1 1 1s1-.4 1-1v-9.6l3.8 3.8c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4l-5.5-5.5c-.1-.1-.2-.2-.3-.2-.2-.1-.5-.1-.8 0l-.3.2-5.5 5.5c-.4.4-.4 1 0 1.4.2.2.4.3.7.3z" />
-		</symbol>
-		<symbol id="arrow-down" viewBox="0 0 24 24">
-			<path
-				d="M12 18c-.2 0-.5-.1-.7-.3l-11-10c-.4-.4-.4-1-.1-1.4.4-.4 1-.4 1.4-.1l10.4 9.4 10.3-9.4c.4-.4 1-.3 1.4.1.4.4.3 1-.1 1.4l-11 10c-.1.2-.4.3-.6.3z" />
-		</symbol>
-		<symbol id="arrow-up" viewBox="0 0 24 24">
-			<path
-				d="M11.9 5.9c.2 0 .5.1.7.3l11 10c.4.4.4 1 .1 1.4-.4.4-1 .4-1.4.1l-10.4-9.4-10.3 9.4c-.4.4-1 .3-1.4-.1-.4-.4-.3-1 .1-1.4l11-10c.1-.2.4-.3.6-.3z" />
-		</symbol>
-		<symbol id="arrow-top" viewBox="0 0 24 24">
-			<path
-				d="M20.7 10.3l-8-8c-.4-.4-1-.4-1.4 0l-8 8c-.4.4-.4 1 0 1.4s1 .4 1.4 0l6.3-6.3v15.6c0 .6.4 1 1 1s1-.4 1-1v-15.6l6.3 6.3c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4z" />
-		</symbol>
-		<symbol id="drop-down" viewBox="0 0 16 16">
-			<polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
-				points="1,5 8,12 15,5" fill="none"></polyline>
-		</symbol>
-		<symbol id="play" viewBox="0 0 30 30">
-			<path d="M7 30v-30l22 15z" />
-		</symbol>
-		<symbol id="arrow-left" viewBox="0 0 31 72">
-			<path
-				d="M30 72c-.3 0-.6-.1-.8-.4l-29-34c-.3-.4-.3-.9 0-1.3l29-36c.3-.4 1-.5 1.4-.2.4.3.5 1 .2 1.4l-28.5 35.5 28.5 33.4c.4.4.3 1.1-.1 1.4-.2.1-.5.2-.7.2z" />
-		</symbol>
-		<symbol id="arrow-right" viewBox="0 0 31 72">
-			<path
-				d="M1 0c.3 0 .6.1.8.4l29 34c.3.4.3.9 0 1.3l-29 36c-.3.4-1 .5-1.4.2-.4-.3-.5-1-.2-1.4l28.5-35.5-28.5-33.4c-.4-.4-.3-1.1.1-1.4.2-.1.5-.2.7-.2z" />
 		</symbol>
 		<symbol id="drop-down" viewBox="0 0 16 16">
 			<polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
@@ -374,33 +334,12 @@
 			</div>
 		</div>
 	</section>
-	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka"
+	<section class="slide" data-name="boka" name="boka" data-title="boka" id="boka"
 		style="background: #f6f9fc;">
-		<div class="container-lg margin-bottom-5" style="margin-top: 5rem;">
-			<div class="pad formBackground form-column">
-				<h3 class="pad-header margin-0 center common-BodyTitle">
-					Redo att boka?
-					<p class="common-BodyText margin-0">
-						Lämna ett meddelande så hör vi av oss.<button class="button round small popupTrigger white sourceSans" data-popup-id="hash-popup">Välj datum</button>
-					</p>
-				</h3>
-				<div class="">
-					<div class="form-bg-offset">
-						<!--[if lte IE 8]>
-						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-						<![endif]-->
-						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-						<script>
-							hbspt.forms.create({
-								portalId: "4367163",
-								formId: "b81e934c-768e-42d0-b0cf-cd7e85b871d2"
-							});
-						</script>
-					</div>
-					<footer></footer>
-				</div>
-			</div>
-			<div class="secondary-column">
+		<div class="container-lg margin-bottom-5 toCenter center" style="margin-top: 5rem;">
+			<span class="common-BodyTitle">Redo att boka?</span>
+			<div id="bokamera-embedded"></div>
+			<!-- <div class="secondary-column">
 				<div class="customers">
 					<p class="copy-1 common-BodyTitle">Gör som många andra och anlita Besiktningsman.se</p>
 					<ul class="customer-logos">
@@ -416,7 +355,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+			</div> -->
 
 		</div>
 	</section>
@@ -559,26 +498,14 @@
 				</div>
 			</div>
 	</section>
-	<!-- Popup -->
-	<div class="popup animated" data-popup-id="hash-popup">
-		<div class="close"><svg>
-				<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-			</svg></div>
-		<div class="content">
-			<div class="container">
-				<div class="wrap">
-					<div class="ae-1">Don't forget to subscribe on our news and updates!</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
 	
 
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js"
 		integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
+	<script src="https://apps.bokamera.se/embedded/v2/embed.js"></script>
 	<script src="../js/slides.min.js" type="text/javascript" name="main-scripts"></script>
 	<script src="../js/custom.js" type="text/javascript" name="main-scripts"></script>
 </body>
