--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -23,7 +23,9 @@
     <meta name="twitter:description" content="Kontakta oss med frågor eller för att boka en besiktning" />
     <meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
     <!-- Fonts and Material Icons -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 
 
     <!-- Styles -->
