--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -28,7 +28,9 @@
 		content="Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren? Då kan en garantibesiktning behövas." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../../../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
