--- a/dokument/index.html
+++ b/dokument/index.html
@@ -22,7 +22,9 @@
 	<meta name="twitter:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
 	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
