--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -23,7 +23,9 @@
 	<meta name="twitter:description" content="Här kan du läsa våra blogg-inlägg samt nyhetsbrev" />
 	<meta name="twitter:title" content="Nyheter från Besiktningsman.se" />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
