--- a/skanska/index.html
+++ b/skanska/index.html
@@ -24,7 +24,9 @@
 	<meta name="twitter:description" content="Slipp administrationsarbetet. Boka in en besiktning med ett klick!" />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
