--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -26,7 +26,9 @@
 		content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
 	<meta name="twitter:title" content="Besiktningstjänster för bostadsrättsföreningar" />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- accordion styling -->
