--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -28,7 +28,9 @@
 		content="Vill du säkerställa att entreprenaden färdigställs enligt tidplanen och inom budget? Då är fortlöpande besiktning en stor fördel." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../../../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- accordion styling -->
