--- a/tjanster/privat/bekraftelse/index.html
+++ b/tjanster/privat/bekraftelse/index.html
@@ -23,7 +23,9 @@
 	<meta name="twitter:description" content="Tack för ditt meddelande! Vi kommer att höra av oss så fort som möjligt." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../../../../../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- accordion styling -->
