Small updates to consultancy page

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -28,7 +28,9 @@
 		content="Boka tid idag för rådgivning med byggrelatade frågor hos Besiktningsman.se" />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+		rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
@@ -129,13 +131,14 @@
 				"listingLayout": "rows",
 				"showNextAvailableTime": false,
 				"hideServiceImage": false,
-				"showEndTimeOnTimeslots": false,
+				"showEndTimeOnTimeslots": true,
 				"language": "sv",
 				"darkTheme": false,
 				"translations": []
 			}
 		}
 	</script>
+
 </head>
 
 <body class="slides scroll simplifiedMobile defaultScroll">
@@ -231,9 +234,9 @@
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 
-					<div class="container-lg left" style="padding-top: 5%;padding: 0;">
-						<h1 class="common-IntroText text-white">
-							Konsultera en Besiktningsman
+					<div class="container-lg left" style="padding-top: 5%;padding: 15px;">
+						<h1 class="common-IntroText text-white" style="font-family: 'Merriweather', serif;">
+							Konsultera en besiktningsman
 						</h1>
 						<p class="common-BodyText text-white">
 							Rådgivning för dig med byggrelatade frågor
@@ -259,7 +262,7 @@
 					<div class="margin-top-1 margin-bottom-5">
 						<ul class="flex left">
 							<li class="col-6-12 fromBottomLeft">
-								<h2 class="common-IntroText2">
+								<h2 class="common-IntroText2" style="font-family: 'Merriweather', serif;">
 									Vad innebär en konsultation med Besiktningsman.se?
 								</h2>
 								<p class="common-BodyText">
@@ -268,7 +271,7 @@
 								- så har du kommit rätt.
 								</p>
 								<p class="common-BodyText">
-									Med några enkla knapptryck får du en besiktningsman direkt i mobilen som kan besvara alla dina byggrelaterade frågor,
+									Med några enkla knapptryck får du en oberoende besiktningsman direkt i mobilen som kan besvara alla dina byggrelaterade frågor,
 									stora som små.
 								</p>
 								<p class="common-BodyText">
@@ -299,19 +302,19 @@
 		<div class="content">
 			<div class="container">
 				<div class="container-lg">
-					<div class="toCenter center margin-top-1 margin-bottom-5">
+					<div class="toCenter center margin-top-1 margin-bottom-5" style="font-family: 'Merriweather', serif;">
 						<h2 class="common-IntroText2">
 								Hur går en konsultation till?
 						</h2>
 					</div>
 					<ul class="grid center margin-top-5 margin-bottom-10">
 						<li class="col-2-12" style="    max-width: 24.66667%;">
-							<img src="../assets/img/bm/contact-form-icon.svg" alt="" style="width: 100px;">
-							<p class="common-BodyText">Fyll i formuläret</p>
-						</li>
-						<li class="col-2-12" style="    max-width: 24.66667%;">
 							<img src="../assets/img/bm/calendarbooker-icon.svg" alt="" style="width: 100px;">
 							<p class="common-BodyText">Välj en ledig tid</p>
+						</li>
+						<li class="col-2-12" style="    max-width: 24.66667%;">
+							<img src="../assets/img/bm/contact-form-icon.svg" alt="" style="width: 100px;">
+							<p class="common-BodyText">Fyll i formuläret</p>
 						</li>
 						<li class="col-2-12" style="    max-width: 24.66667%;">
 							<img src="../assets/img/bm/payment-icon.svg" alt="" style="width: 100px;">
@@ -326,7 +329,7 @@
 							<span class="message left">
 								Ett samtal med en av våra besiktningsmän kostar 595 kr (inkl. moms) för 30 min.
 								<br>
-								Du kan välja mellan ett videosamtal och ett vanligt telefonsamtal i steg 3.
+								Du kan välja mellan ett videosamtal och ett vanligt telefonsamtal.
 							</span>
 						</div>
 					</ul>
