--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -339,8 +339,8 @@
 	</section>
 	<section class="slide" data-name="boka" name="boka" data-title="boka" id="boka"
 		style="background: #f6f9fc;">
-		<div class="container-lg margin-bottom-5 toCenter center" style="margin-top: 5rem;">
-			<span class="common-BodyTitle">Redo att boka?</span>
+		<div class="container-lg margin-bottom-5 toCenter center" style="margin-top: 5rem;font-family: 'Merriweather', serif;">
+			<h3 class="common-IntroText2">Redo att boka?</h3>
 			<div id="bokamera-embedded"></div>
 			<!-- <div class="secondary-column">
 				<div class="customers">
