Updated bm info card image

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -288,7 +288,8 @@
 								</p>
 							</li>
 							<li class="col-6-12 bottom">
-								<img src="../assets/img/bm/viberg_lindbom.png" style="width: 100%;"/>
+									<img src="../assets/img/bm/viberg_lindbom.png" alt="" 
+									style="max-width: 640px;">
 							</li>
 						</ul>
 					</div>
