--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
 							<li><a href="#entreprenad"
 									class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
 							<li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">brf</a></li>
+							<li><a href="/konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Konsultation</a></li>
 						</ul>
 						<a href="tel:0101654000" id="mobilePhoneNumber">
 							<p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 -
@@ -288,7 +289,7 @@
 			</div>
 		</div>
 		<div class="background"
-			style="background-image:url(assets/img/backgrounds/winter/sodermalm_winter.jpg);min-height: 80vh;"
+			style="background-image:url(assets/img/backgrounds/summer/sodermalm_summer.jpg);min-height: 80vh;"
 			alt="Foto av Södermälarstrand, Södermalm, Stockholm"></div>
 	</section>
 	<!-- ENTERPRISE START -->
@@ -524,7 +525,7 @@
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"
 									id="landingPagePhotos" width="1000" height="700"
-									src="assets/img/backgrounds/winter/winter_apartments.jpg"
+									src="assets/img/backgrounds/summer/summer_apartments.jpg"
 									alt="Foto av en BRFs fasad" />
 							</li>
 						</ul>
