Removed the word "Swish"
Removed the "Swish" from the text, as we're not yet offering it.

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -320,7 +320,7 @@
 						</li>
 						<li class="col-2-12" style="    max-width: 24.66667%;">
 							<img src="../assets/img/bm/payment-icon.svg" alt="" style="width: 100px;">
-							<p class="common-BodyText">Betala enkelt med kort, Swish eller faktura</p>
+							<p class="common-BodyText">Betala enkelt med kort eller faktura</p>
 						</li>
 						<li class="col-2-12" style="    max-width: 24.66667%;">
 							<img src="../assets/img/bm/phone-icon.svg" alt="" style="width: 100px;">
