--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							<li><a href="#entreprenad"
 									class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
 							<li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">brf</a></li>
-							<li><a href="/konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Konsultation</a></li>
+							<li><a href="/konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
 						</ul>
 						<a href="tel:0101654000" id="mobilePhoneNumber">
 							<p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 -
@@ -465,7 +465,6 @@
 										<p class="common-Link">Gå till tjänster för entreprenadbesiktningar<i
 												class="icono-arrow2-left"></i></p>
 									</a>
-									<!-- typeform button -->
 									<p class="common-BodyTitle2">Redo att boka? Lämna ett meddelande så hjälper vi dig!
 									</p>
 									<a class="common-Button blue text-white margin-bottom-2"
@@ -512,7 +511,6 @@
 										<p class="common-Link">Gå till tjänster för bostadsrättsföreningar<i
 												class="icono-arrow2-left"></i></p>
 									</a>
-									<!-- typeform button -->
 									<p class="common-BodyTitle2">Redo att boka? Hör gärna av dig så hjälper vi till!</p>
 									<a class="common-Button blue text-white margin-bottom-2" href="tjanster/brf/#boka">
 										Lämna ett meddelande
