Rip off code added

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -245,7 +245,7 @@
 						<a href="#boka">
 							<button type="button" name="button"
 								class="common-Button text-blue bold">
-								boka tid
+								Boka tid nu
 							</button> 
 						</a>
 					</div>
@@ -341,8 +341,17 @@
 	</section>
 	<section class="slide" data-name="boka" name="boka" data-title="boka" id="boka"
 		style="background: #f6f9fc;">
-		<div class="container-lg margin-bottom-5 toCenter center" style="margin-top: 5rem;font-family: 'Merriweather', serif;">
-			<h3 class="common-IntroText2">Redo att boka?</h3>
+		<div class="container-lg margin-bottom-5 toCenter center" style="margin-top: 5rem;">
+			<h3 class="common-IntroText2" style="font-family: 'Merriweather', serif;">Redo att boka?</h3>
+			<div class="announcement soft-shadow" style="margin-top: 1rem;">
+				<span class="new-pill">40% AVDRAG</span>
+				<span class="message left common-BodyText">
+					På grund av rådande omständigheter kring spridningen av coronaviruset, 
+					<br>
+					vill vi stötta de som sitter i karantän med 40%
+					avdrag på alla våra rådgivningstjänster. <br> <b>Använd kod: KARANTAN40</b>
+				</span>
+			</div>
 			<div id="bokamera-embedded"></div>
 			<!-- <div class="secondary-column">
 				<div class="customers">
