--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -276,7 +276,7 @@
 									stora som små.
 								</p>
 								<p class="common-BodyText">
-									Samtliga våra besiktningsmän är Byggingenjör SBR. 
+									Samtliga av våra besiktningsmän är Byggingenjör SBR. 
 									De har en gedigen erfarenhet från nyproduktion , ROT, projektledning etc. 
 									Samt naturligtvis tusentals utförda besiktningar.
 								</p>
