Add id tag to target intro bm images

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -256,7 +256,7 @@
 		<div class="background" style="background-image:url(../assets/img/bm/zoom.jpg)"
 			alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
-	<section class="slide whiteSlide autoHeight" style="background: #f6f9fc;">		
+	<section class="slide whiteSlide autoHeight" style="background: #f6f9fc;" id="consultIntro">		
 		<div class="content">
 			<div class="container">
 				<div class="container-lg">
@@ -289,8 +289,7 @@
 								</p>
 							</li>
 							<li class="col-6-12 bottom">
-									<img src="../assets/img/bm/viberg_lindbom.png" alt="" 
-									style="max-width: 640px;">
+									<img src="../assets/img/bm/viberg_lindbom.png" alt="" >
 							</li>
 						</ul>
 					</div>
