--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -240,7 +240,7 @@
 							Konsultera en besiktningsman
 						</h1>
 						<p class="common-BodyText text-white">
-							Rådgivning för dig med byggrelatade frågor
+							Rådgivning för dig med byggrelaterade frågor
 						</p>
 						<a href="#boka">
 							<button type="button" name="button"
